--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
     <script src="pixi.min.js"></script>
   </head>
   <body>
-    <script type="module" src="newspaper.js"></script>
+    <script type="module" src="game.js"></script>
   </body>
 </html>
